--- a/744Project/Views/CreditCards/Create.cshtml
+++ b/744Project/Views/CreditCards/Create.cshtml
@@ -18,6 +18,16 @@
                 <h4>Credit Card</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                @*Card number:*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.cardNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.cardNumber, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.cardNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
                 @*First name:*@
                 <div class="form-group">
                     @Html.LabelFor(model => model.firstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,7 +36,7 @@
                         @Html.ValidationMessageFor(model => model.firstName, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @*Second name:*@
+                @*Last name:*@
                 <div class="form-group">
                     @Html.LabelFor(model => model.lastName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -34,14 +44,7 @@
                         @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @*Card number:*@
-                @*<div class="form-group">
-            @Html.LabelFor(model => model.cardNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cardNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cardNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -60,12 +63,12 @@
                 </div>
 
                 @*<div class="form-group">
-                    @Html.LabelFor(model => model.cardMaxAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.cardMaxAllowed, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.cardMaxAllowed, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
+            @Html.LabelFor(model => model.cardMaxAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.cardMaxAllowed, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.cardMaxAllowed, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.accountID, "Account Number", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -74,7 +77,7 @@
                         @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
                     </div>
                 </div>
-               
+
 
 
 
