--- a/744Project/Views/CreditCards/Edit.cshtml
+++ b/744Project/Views/CreditCards/Edit.cshtml
@@ -46,9 +46,10 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @*@Html.Label("cardExpirationDate", htmlAttributes: new { @class = "control-label col-md-2" })*@
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.cardExpirationDate, new { htmlAttributes = new { type = "month", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.cardExpirationDate, "", new { @class = "text-danger" })
+                        @Html.Editor("cardExpirationDate", new { htmlAttributes = new { type = "month", @class = "form-control" } })
+                        @Html.ValidationMessage("cardExpirationDate", "", new { @class = "text-danger" })
                     </div>
                 </div>
 
