--- a/744Project/Views/EditNetwork/Index.cshtml
+++ b/744Project/Views/EditNetwork/Index.cshtml
@@ -11,15 +11,15 @@
             <h2>Choose from the options below to edit:</h2>
             @*Create new Region:*@
             <h3>
-                <a href="../Regions"> View and Add Regions </a>
+                <a href="../Regions/Create"> Add a new region </a>
             </h3>
             @*Create new Relay:*@
             <h3>
-                <a href="../Relays"> View and Add Relays </a>
+                <a href="../Relays/Create"> Add a new relay </a>
             </h3>
             @*Create new Store:*@
             <h3>
-                <a href="../Stores"> View and Add Stores </a>
+                <a href="../Stores/Create"> Add a new Store </a>
             </h3>
             @*Create new Connection:*@
             <h3>
