--- a/744Project/Views/Stores/Create.cshtml
+++ b/744Project/Views/Stores/Create.cshtml
@@ -10,16 +10,16 @@
         <div class="panel-body">
 
             @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
+    {
+        @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <h4>Store</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-horizontal">
+            <h4>Store</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-                @*<div class="form-group">
+            @*<div class="form-group">
             @Html.LabelFor(model => model.storeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.storeID, new { htmlAttributes = new { @class = "form-control" } })
@@ -27,46 +27,47 @@
             </div>
         </div>*@
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.storeIP, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.storeIP, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.storeIP, "", new { @class = "text-danger" })
-                    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.storeIP, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.storeIP, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.storeIP, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.storeName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.storeName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.storeName, "", new { @class = "text-danger" })
-                    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.storeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.storeName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.storeName, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.storeWeight, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.storeWeight, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.storeWeight, "", new { @class = "text-danger" })
-                    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.storeWeight, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.storeWeight, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.storeWeight, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                @*<div class="form-group">
+            @*<div class="form-group">
             @Html.LabelFor(model => model.Relay.relayID, "Relay", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("relayID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Relay.relayID, "", new { @class = "text-danger" })
             </div>
         </div>*@
-                <div class="form-group">
-                    @Html.Label("Relay IP ", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("relayIp", new SelectList(ViewBag.ip, ""), htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessage("relayIp", "", new { @class = "text-danger" })
-                    </div>
+            <div class="form-group">
+                @Html.Label("Relay IP ", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("relayIp", new SelectList(ViewBag.ip, ""), htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessage("relayIp", "", new { @class = "text-danger" })
+                    <h4 style="color:green">@ViewBag.SuccessMessage</h4>
                 </div>
+            </div>
 
-                @*<div class="form-group">
+            @*<div class="form-group">
             @Html.LabelFor(model => model.regionID, "regionID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("regionID", null, htmlAttributes: new { @class = "form-control" })
@@ -74,18 +75,22 @@
             </div>
         </div>*@
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
                 </div>
             </div>
-            }
+        </div>
+}
+
+            @*<div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>*@
 
             <div>
-                @Html.ActionLink("Back to List", "Index")
+                <a href="../EditNetwork"> Back to Network Options </a>
             </div>
 
-</div>
+        </div>
 </div>
 </div>
