--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -285,11 +285,14 @@
 			obj['pos'] = nodes[i].position();
 			console.log(jsonData.networkEntities);
 			console.log(nodes[i]);
-			if (nodes[i].id() != 1 && nodes[i].id() != 2 && nodes[i].id() != 3 && nodes[i].id() != 4 && nodes[i].id() != 5 && nodes[i].id() != 6 && nodes[i].id() != 7 && nodes[i].id() != 8) {
+			if (jsonData.networkEntities[obj['id']] != null) {
+				obj['isActive'] = jsonData.networkEntities[obj['id']].isActive;
+			}
+			/*if (nodes[i].id() != 1 && nodes[i].id() != 2 && nodes[i].id() != 3 && nodes[i].id() != 4 && nodes[i].id() != 5 && nodes[i].id() != 6 && nodes[i].id() != 7 && nodes[i].id() != 8) {
 				console.log(jsonData.networkEntities[obj['id']]);
 				//obj['category'] = jsonData.networkEntities[obj['id']].type;//nodes[i].category;
 				obj['isActive'] = jsonData.networkEntities[obj['id']].isActive;
-			}
+			}*/
 			else {
 				//obj['category'] = -1;
 				obj['isActive'] = true;
