to pull Abe'code

--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -132,7 +132,7 @@
 				style: {
 					'border-width': '5',
 					'background-color': 'data(color)',
-					content: 'data(name)',
+					content: 'data(id)',
                     'curve-style': 'bezier',
                     'shape': 'data(shape)',
                     'width': 'data(width)',
