Fixing Relays to be inactive before they are changed (queue limit). Also changed background to show final demo

--- a/744Project/Views/Home/Index.cshtml
+++ b/744Project/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 		border-radius: 5px;
 		background-color:white;">
     <h1>Network Communication Platform</h1>
-    <p class="lead">Team Saturn. Demo 2</p>
+    <p class="lead">Team Saturn. Final Demo</p>
 </div>
 
 <style type="text/css">
