--- a/744Project/Views/Transactions/Details.cshtml
+++ b/744Project/Views/Transactions/Details.cshtml
@@ -21,11 +21,11 @@
                     </dd>*@
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.CreditCard.cardNumber)
+                        @Html.DisplayNameFor(model => model.cardNumber)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.CreditCard.cardNumber)
+                        @Html.DisplayFor(model => model.cardNumber)
                     </dd>
 
                     <dt>
@@ -61,11 +61,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.StoreTransactions.First().Store.storeIP)
+                        @Html.DisplayNameFor(model => model.storeIP)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.StoreTransactions.First().Store.storeIP);
+                        @Html.DisplayFor(model => model.storeIP)
                     </dd>
 
 
