--- a/744Project/Views/Network/GetNodeInformation.cshtml
+++ b/744Project/Views/Network/GetNodeInformation.cshtml
@@ -22,6 +22,8 @@
 		<dl class="dl-horizontal">
 			<dt>Ip</dt>
 			<dd>@Model.ip</dd>
+			<dt>Name</dt>
+			<dd>@Model.name</dd>
 			<dt>Active</dt>
 			<dd>@Model.isActive</dd>
 			<dt>Gateway</dt>
