--- a/744Project/Views/Accounts/Edit.cshtml
+++ b/744Project/Views/Accounts/Edit.cshtml
@@ -31,13 +31,13 @@
                 </div>
                
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.accountName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.accountName, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.accountName, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.accountFirstName, htmlAttributes: new { @class = "control-label col-md-2" })
